package task3;

import task3.Matrix.Position;

public interface Matrixable {

    public void setPosition(Position position);

    public Position getPosition();

    public int getValue();

}
